Переписан механизм работы со структурированными объектами и моссивами, использован JRE11, использован Camel 3.20